<resources>
    <string name="app_name" translatable="false">Week11</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="enable_textfield">Enable Textfield</string>
    <string name="fontsize">Fontsize</string>
    <string name="width">Width</string>
    <string name="hight">Hight</string>
    <string name="number_of_rows">Number of rows</string>
    <string name="display_text">Display text</string>
    <string name="type_here">Type here</string>
    <string name="text_welcome_home">This is home fragment</string>
    <string name="text_welcome_settings">This is settings fragment</string>

    <string-array name="langs">
        <item name="english">English</item>
        <item name="finnish">Finnish</item>
        <item name="swedish">Swedish</item>
    </string-array>
</resources>